fixed bug with "export to csv -> load csv -> export sublime is bad :( -> import sublime does not work"