@@ -6,5 +6,7 @@
 - alias support
 - maxLenght in fields
 - og keywords and media
-- refresh page https://www.robinwieruch.de/local-storage-react/
 - vim support ?
+
+// made 
+- refresh page https://www.robinwieruch.de/local-storage-react/
