@@ -1,5 +1,5 @@
 ## Bindings
-[bindings.](#) is a simple ReactJS app.
+[bindings.](https://timadevelop.github.io/bindings/) is a simple ReactJS app.
 It allows you to import, change or export keymap bindings in popular editors as Atom, Sublime Text, vim and other.
 
 __basic usage scenario is:__ import keymap file from popular editor (or JSON key-value), look at key bindings, change some binding, convert it to a JSON representation (to the keymap file for some editor)
@@ -7,12 +7,25 @@ __basic usage scenario is:__ import keymap file from popular editor (or JSON key
 ## Bindings File Formats
 
 for assuring proper converting use following file formats.
-- `.json` - basic JSON format (You can import/export `.json` file)
-```json
-[
-{"key":"key1","value":"1"},
-{"key":"Ctrl+V","value":"paste"},{"key":"k2","value":"k3"},
-{"key":"131452","value":"23564"}]
+you can find sample files for some file types in `/samples` directory
+
+- `.alias` - bash alias (You can import/export `.alias` file)
+```bash
+alias g='git'
+alias ga='git add'
+alias gaa='git add --all'
+alias gapa='git add --patch'
+alias gau='git add --update'
+alias gap='git apply'
+alias gb='git branch'
+```
+
+- `.atom` or `.cson` - Atom editor (atom uses CSON)
+```cson
+'atom-text-editor':
+	'ctrl+v': 'paste'
+	'ctrl+c': 'copy'
+	'ctrl-f': 'find'
 ```
 
 - `.csv` - CSV format
@@ -26,6 +39,21 @@ gau,git add --update
 gba,git branch -a
 ```
 
+- `.json` - basic JSON format
+```json
+[{"key":"g","value":"git"},{"key":"ga","value":"git add"},
+{"key":"gaa","value":"git add --all"},
+{"key":"gapa","value":"git add --patch"},
+{"key":"gau","value":"git add --update"},
+{"key":"gap","value":"git apply"}
+]
+or
+[
+{"key":"key1","value":"1"},
+{"key":"Ctrl+V","value":"paste"},{"key":"k2","value":"k3"},
+{"key":"131452","value":"23564"}]
+```
+
 - `.sublime` - Sublime Text 3
 ```json
 [
@@ -35,27 +63,12 @@ gba,git branch -a
 ,	{ "keys": ["131452"], "command": "23564" }
 ]
 ```
-- `.atom` or `.cson` - Atom editor (atom uses CSON)
-```cson
-'atom-text-editor':
-	'ctrl+v': 'paste'
-	'ctrl+c': 'copy'
-	'ctrl-f': 'find'
-```
 
-- `.alias` - bash alias
-```bash
-alias g='git'
-alias ga='git add'
-alias gaa='git add --all'
-alias gapa='git add --patch'
-alias gau='git add --update'
-alias gap='git apply'
-alias gb='git branch'
-```
+not implemented yet :
 - `.vim` - vim maps
-```
-not implemented yet :(
-```
 - `.vs` - Visual Studio
 - `.eclipse` - Eclipse
+
+---
+
+see changelog in the root of the repo
