@@ -1,1 +1,2 @@
-fixed bug with "export to csv -> load csv -> export sublime is bad :( -> import sublime does not work"
+- saving state to browser cache
+- fixed bug with "export to csv -> load csv -> export sublime is bad :( -> import sublime does not work"
